# umzugassistent

./: .gitignore  CMakeLists.txt  README.md  main.cpp  umzugassistent.code-workspace
.circleci/: config.yml
lib/libinotify-cpp/include/: FileSystemEvent.h  Inotify.h  Notification.h  NotifierBuilder.h
src/: CMakeLists.txt  CommandExecuter.cpp  DiskUsageCommand.cpp  InputParser.cpp  Inputparser.cpp  Inputparser.cpp.autosave  MoveCommand.cpp  RuleMatcher.cpp  TarCommand.cpp
src/header/: Command.hpp  CommandExecuter.hpp  DiskUsageCommand.hpp  FileWatcher.hpp  InputParser.hpp  Inputparser.hpp  MoveCommand.hpp  RuleMatcher.hpp  TarCommand.hpp
unitTest/: CMakeLists.txt  TestDiskUsageCommand.cpp  TestInputParser.cpp  TestMoveCommand.cpp  TestRuleMatcher.cpp  TestTarCommand.cpp
